--- a/config.yaml
+++ b/config.yaml
@@ -56,3 +56,19 @@ options:
     type: string
     default: ""
     description: create a new job for this launchpad branch
+  publisher_channel:
+    type: string
+    default: ""
+    description: channel to publish build results
+  publisher_site:
+    type: string
+    default: ""
+    description: site to publish build results
+  publisher_username:
+    type: string
+    default: ""
+    description: username to publish build results
+  publisher_password:
+    type: string
+    default: ""
+    description: password to publish build results
