--- a/config.yaml
+++ b/config.yaml
@@ -104,3 +104,7 @@ options:
     type: string
     default: ""
     description: channel to publish build results
+  tester_environment:
+    type: string
+    default: ""
+    description: juju environment to use for testing charms
